--- a/client/apps/jmkac/src/app/admin/style.styl
+++ b/client/apps/jmkac/src/app/admin/style.styl
@@ -1,2 +1,34 @@
-h1
-    color: green
+h1 {
+    color: green;
+}
+#outer {
+    height: 100vh
+    width: 100vw
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: black
+}
+
+#inner {
+    background-image: url('/assets/map.jpg');
+    background-size: cover;
+    height: 800px;
+    width: 1200px;
+
+    svg {
+        width: 99%;
+        height: 99%;
+
+        circle {
+            fill: red;
+
+            &.active {
+                stroke: #eee;
+                stroke-width: 2px;
+            }
+        }
+    }
+}
