--- a/client/apps/jmkac/src/styles.styl
+++ b/client/apps/jmkac/src/styles.styl
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    margin: 0
+    padding: 0
+    border: 0
+    box-sizing: border-box
+
+    * {
+        box-sizing: border-box
+    }
+}
